# stock

./: .gitignore  Dockerfile  PresidentNewsroomCrawling.ipynb  README.md  Untitled.ipynb  docker-compose.yml  get_president.py  get_telethon.py  pyproject.toml
account/: urls.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_is_staff_alter_user_is_superuser.py  0002_user_kakao_email_alter_user_is_active.py  0003_alter_user_stock_code_1_alter_user_stock_code_2_and_more.py
accounts/templates/accounts/: signin.html  signup.html
config/: settings.py  urls.py
poetry-stock/: pyproject.toml
static/css/: style.css
stock/: admin.py  models.py  telethon_script.py  urls.py  views.py
stock/migrations/: 0001_initial.py  0002_alter_presidentfact_title.py  0002_alter_stock_site_name.py  0002_channel_delete_stock.py  0003_alter_stock_title.py  0003_stock.py  0004_alter_channel_options_alter_stock_options_and_more.py  0004_alter_stock_title_alter_stock_url.py  0005_presidentbriefing_presidentfact_alter_stock_options.py
stock/templates/stock/: base.html  header.html  index.html  presidentfact_list.html  stock_detail.html  stock_favorite.html  stock_list.html
