[tool.poetry]
name = "poetry-stock"
version = "0.1.0"
description = ""
authors = ["2044smile <2044smile@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
telethon = "^1.26.0"
django-telethon = "^1.1.5"
redis = "^4.4.0"
celery = "^5.2.7"
django-celery-results = "^2.4.0"
apscheduler = "^3.9.1.post1"
django-extensions = "^3.2.1"
pillow = "^9.4.0"
django-imagekit = "^4.1.0"
beautifulsoup4 = "^4.11.1"
jupyter = "^1.0.0"
requests = "^2.28.2"
psycopg2-binary = "^2.9.5"
django-environ = "^0.9.0"
djangorestframework = "^3.14.0"
django-allauth = "^0.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
